# rviz2_urdf_editor

./: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
doc/: index.rst  rosdoc2.yaml
include/rviz2_urdf_editor/: robot_state_publisher_runtime.hpp  urdf_editor_state.hpp  urdf_tf_tree_marker_server.hpp  widgets.hpp
launch/: editor.launch.py
layouts/: editor.rviz
src/: robot_state_publisher_runtime.cpp  urdf_editor_state.cpp  urdf_tf_tree_marker_server.cpp  widgets.cpp
test/: test_panels.cpp  test_plugin_exports.cpp  test_urdf_editor_state.cpp  test_urdf_tf_tree_marker_server.cpp
test/fixtures/: find_include_macro.xacro
